--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <script type='text/javascript' src="js/knockout-3.0.0.js"></script>
+    <!-- <script type='text/javascript' src="js/knockout-3.0.0.js"></script> -->
+    <script type='text/javascript' src="js/knockout-3.3.0.js"></script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -52,10 +53,10 @@
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content text-right">
           <div class="modal-header">
             <!-- <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> -->
-            <h4 class="modal-title" id="myModalLabel">Results</h4>
+            <h4 class="modal-title" id="myModalLabel">النتيجة</h4>
           </div>
           <div class="modal-body">
             <div data-bind="foreach: results">
